--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@
         <h1>Las Abejas</h1>
         <h2 class="intro">existen un total de 9 especies de abejas y luego existen mas de 50 subespecies de abejas las cuales se generan al entrecruzar especies y subespecies</h2>
     <article>
-        <div class="row row-cols-4 abejacaja1">
-                <img class="abeja1 col-sm-auto" src="./images/abejaejemplo.jpg" alt="una imagen de una abeja">
-                <div class="textoabeja1 col-sm-auto">
+        <div class="row row-cols-4">
+        <div class="abejacaja1">
+                <img class="abeja1" src="./images/abejaejemplo.jpg" alt="una imagen de una abeja">
+                <div class="textoabeja1">
                     <p><h2>una imagen de una abeja,Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque corporis reprehenderit maiores doloremque nisi beatae voluptas totam dolorem ut deserunt hic explicabo iure quasi sequi commodi sed amet, aliquid voluptatem.
                     Unde natus sunt commodi libero ex sit voluptate animi quos, fuga error aliquid obcaecati doloribus dignissimos doloremque, nostrum illo harum. Ullam quis fuga eius quos quaerat molestias alias, accusamus autem.
-                    Quo esse velit, mollitia debitis amet soluta impedit rem placeat nostrum vitae iure officia maiores tempora repellendus suscipit explicabo perferendis obcaecati nemo ut fugit dolores dicta quis. Voluptatem, maiores architecto.
-                    Eum facere labore culpa, eligendi fuga eos debitis incidunt mollitia nulla exercitationem nostrum vel. Rerum sequi autem, earum laborum suscipit animi perferendis nihil culpa architecto vero mollitia! Expedita, similique exercitationem!
-                    Corrupti magnam suscipit quisquam officia tempora, aspernatur eveniet nostrum soluta laudantium natus sapiente itaque. Amet voluptate dolore quisquam incidunt provident laudantium ea assumenda modi esse nemo labore, enim quaerat eum?</h2></p>
+                    Quo esse velit, mollitia debitis amet soluta impedit rem placeat nostrum vitae iure officia maiores tempora repellendus suscipit explicabo perferendis obcaecati nemo ut fugit dolores dicta quis. Voluptatem, maiores architecto. provident laudantium ea assumenda modi esse nemo labore, enim quaerat eum?</h2></p>
                 </div>
         </div>
     </article>
@@ -63,18 +62,18 @@
         <h2 class="arañatxt1"> Las Arañas</h2>
         <h2 class="arañatxt2"> Las arañas son re facheras inserte texto ejemplo porque nose que poner Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure at rem doloribus voluptas tempora minima mollitia dolore officia libero vel! Perferendis beat</h2>
         <div class="arañacaja1">
-            <div class="textoaraña1 col-sm-auto">
+            <div class="textoaraña1">
                 <p><h2>Una imagen de una araña, Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti veritatis exercitationem tempore voluptatum harum porro asperiores ipsum repellendus necessitatibus. Repudiandae blanditiis, iure obcaecati itaque officiis doloribus quae dolorem est repellat.</h2></p>
             </div>
-                <img class="araña1 col" src="./images/arañaejemplo.jpg" alt="una imagen de una araña">
+                <img class="araña1" src="./images/arañaejemplo.jpg" alt="una imagen de una araña">
         </div>
     </article>
     <article>
         <h2 class="avispatxt1"> Las Avispas</h2>
         <h2 class="avispatxt2"> Las avispas son re facheras pero haters inserte texto ejemplo porque nose que poner Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure at rem doloribus voluptas tempora minima mollitia dolore officia libero vel! Perferendis beat</h2>
         <div class="avispacaja1">
-                <img class="avispa1 col-sm-auto" src="./images/avispaejemplo.jpg" alt="una imagen de una avispa">
-                <div class="textoavispa1 col-sm-auto">
+                <img class="avispa1 " src="./images/avispaejemplo.jpg" alt="una imagen de una avispa">
+                <div class="textoavispa1">
                     <p><h2>esta es una foto de una avispa, Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, iste quia. Voluptatum qui hic repellendus tenetur. Sequi cumque quos pariatur voluptatem, facilis tenetur laudantium perferendis exercitationem ab, explicabo itaque rerum!
                     Ratione molestiae dolor eum debitis. Excepturi ad delectus error aliquam fugit quaerat debitis voluptatem ex quis magni modi, dolore consequuntur suscipit fugiat alias ratione, libero laboriosam velit, numquam distinctio! Aliquam? </h2></p>
                 </div>
@@ -84,11 +83,11 @@
         <h2 class="escaratxt1"> Los Escarabajos</h2>
         <h2 class="escaratxt2"> Las escarabajos son re facheros inserte texto ejemplo porque nose que poner Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure at rem doloribus voluptas tempora minima mollitia dolore officia libero vel! Perferendis beat</h2>
         <div class="Escarabajocaja1">
-                <div class="Escarabajotexto1 col-sm-auto">
+                <div class="Escarabajotexto1">
                     <p><h2>esta es una foto de un escarabajo, Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, iste quia. Voluptatum qui hic repellendus tenetur. Sequi cumque quos pariatur voluptatem, facilis tenetur laudantium perferendis exercitationem ab, explicabo itaque rerum!
                     Ratione molestiae dolor eum debitis. Excepturi ad delectus error aliquam fugit quaerat debitis voluptatem ex quis magni modi, dolore consequuntur suscipit fugiat alias ratione, libero laboriosam velit, numquam distinctio! Aliquam? </h2></p>
                 </div>
-            <img class="Escarabajo1 col-sm-auto" src="./images/escarabajoejemplo.jpg" alt="una imagen de una avispa">  
+            <img class="Escarabajo1" src="./images/escarabajoejemplo.jpg" alt="una imagen de una avispa">  
         </div>
     </article>
     <article class="museobichos">
@@ -110,6 +109,7 @@
             </div>
         </div>
     </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
