principal_bien_escrito_y_pag_abejas_rediseñado/reactivo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Pagina Principla</a>
+                    <a class="navbar-brand" href="#">Pagina Principal</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -53,7 +53,7 @@
                 <h1 class="titulobicho1">Las Abejas</h1>
                 <h2 class="titulobicho2">existen un total de 9 especies de abejas y luego existen mas de 50 subespecies de abejas las cuales se generan al entrecruzar especies y subespecies</h2>
               <div class="col-7 col-sm-4"> 
-                <img class="img-fluid" src="./images/abejaejemplo.jpg"  alt="una imagen de una abeja">
+                <img class="img-fluid" src="../images/abejaejemplo.jpg"  alt="una imagen de una abeja">
             </div>
               <div class="col-5 col-sm-4"> <p><h2 class="textodescrip1">una imagen de una abeja,Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque corporis reprehenderit maiores doloremque nisi beatae voluptas totam dolorem ut deserunt hic explicabo iure quasi sequi commodi sed amet, aliquid voluptatem.
                 Unde natus sunt commodi libero ex sit voluptate animi quos, fuga error aliquid obcaecati doloribus dignissimos doloremque, nostrum illo harum. Ullam quis fuga eius quos quaerat molestias alias, accusamus autem.</h2></p>
