--- a/pages/Abejas.html
+++ b/pages/Abejas.html
@@ -18,12 +18,11 @@
 <body>
     <div class="background1">
         <div class="container-fluid">
-            <div class="background1">
                 <div class="row">
             <header class="header">
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="../index.html">Pagina Principla</a>
+                        <a class="navbar-brand" href="../index.html">Pagina Principal</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
@@ -44,37 +43,41 @@
                         </ul>
                     </div>
                 </div>
+                <li class="logocontainerm1"><img src="https://images.vexels.com/media/users/3/156307/isolated/preview/45570f652c52ccfad13d9f6b2a432ec6-icono-de-hormiga-simple.png" class="logo" alt="el logo de la pagina, una mantiz"></li>
                 </nav>
             </header>
     <main>
-        <div class="intro">
-        <h1>Las Abejas</h1>
-        <h2>exiten un total de 9 especies de abejas y luego existen mas de 50 subespecies de abejas las cuales se generan al entrecruzar especies y subespecies</h2>
-        </div>
-    <article>
-        <div class="abejacaja">
-                <img class="abeja" src="../images/abejadx.jpg" alt="una imagen de una abeja">
-                <div class="textoabeja">
-                    <p><h2>esta es una foto de una abeja que me parecio fachera</h2></p>
-                </div>
-        </div>
-    </article>
-    <article>
-        <div class="mielcaja">
-            <div class="textomiel">
-                <p><h2>esta es una foto de miel que me parecio bonita</h2></p>
+        <div class="container-fluid text-center h-100">
+            <div class="background1">
+                <div class="row justify-content-center">
+                    <h1 class="titulobicho1">Las Abejas</h1>
+                    <h2 class="titulobicho2">exiten un total de 9 especies de abejas y luego existen mas de 50 subespecies de abejas las cuales se generan al entrecruzar especies y subespecies</h2>
+              <div class="col-7 col-sm-4"> 
+                <img class="img-fluid" src="../images/abejadx.jpg" alt="una imagen de una abeja">
             </div>
-                <img class="miel" src="../images/miel.jpg" alt="una imagen de miel">
+              <div class="col-5 col-sm-4"> 
+                <p><h2 class="textodescrip1">esta es una foto de una abeja que me parecio fachera hagamos como que el texto es mas grande y queda con la imagen de la abeja</h2></p>
+            </div>
         </div>
-    </article>
-    <article>
-        <div class="panalcaja">
-                <img class="panal" src="../images/panaldeabejaentero.jpg" alt="una imagen de un panal">
-                <div class="textopanal">
-                    <p><h2>esta es una foto de un panal que esta fachero </h2></p>
+              <!-- miel de abeja -->
+              <h2 class="titulobicho1"> Miel</h2>
+                <h2 class="titulobicho2"> La miel es muy buena banco mucho, inserte mas texto aca yo que se</h2>
+              <div class="row justify-content-center">
+              <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de miel que me parecio bonita, lo mismo que con la foto de abeja, hagamos de cuenta la tipicia</h2></p></div>
+              <div class="col-7 col-sm-4"><img class="img-fluid" src="../images/miel.jpg" alt="una imagen de un frasco de miel que parece muy bueno"></div>
+              </div>
+                <!-- panal de abeja -->
+                
+                <h2 class="titulobicho1"> Panales de Abeja</h2>
+                <h2 class="titulobicho2"> Los panales de abeja son la casa de las abejas, de ahi sale la miel por si no sabias, manso dato no?</h2>
+                <div class="row justify-content-center" class="pisopag">
+                <div class="col-7 col-sm-4">
+                    <img class="img-fluid" src="../images/panaldeabejaentero.jpg" alt="una imagen de un panal de abejas desde una vista alejada">
                 </div>
-        </div>
-        </article>
+                <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de un panal que esta fachero ya sabes como sigue el texto </h2></p>
+                </div>
+            </div>
+    
         </main>
         <div class="sticky"><img class="logow" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1022px-WhatsApp.svg.png" alt="logo de whatsapp"></div>
     </div>
