--- a/pages/arañas2.html
+++ b/pages/arañas2.html
@@ -29,10 +29,10 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/pages/Abejas.html">Abejas</a>
+                            <a class="nav-link" aria-current="page" href="#">Abejas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Arañas</a>
+                            <a class="nav-link" href="/pages/Arañas.html">Arañas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/pages/Avispas.html">Avispas</a>
@@ -72,13 +72,13 @@
               <h2 class="arañasonly"> Videos</h2>
                 <h2 class="arañasonlydescrip">Vidos de arañas que me parecieron facheros</h2>
               <div class="row justify-content-center">
-              <div class="col-2 col-sm-3">
+              <div class="col-5 col-sm-4">
                 <iframe width="560px" height="443px" src="https://www.youtube.com/embed/PQbScg3r1oQ" title="Spider Dances For His Life!! | Life Story | BBC" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
-              <div class="col-3 col-sm-3">
+              <div class="col-7 col-sm-4">
                 <p><h2 class="arañasonlydescrip"> videos de arañas facheros</h2></p>
             </div>
-              <div class="col-2 col-sm-3">
+              <div class="col-5 col-sm-4">
                 <iframe width="565px" height="443px" src="https://www.youtube.com/embed/zNtSAQHNONo" title="Beautiful Spider Web Build Time-lapse | BBC Earth" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
               </div>
