--- a/pages/Avispas.html
+++ b/pages/Avispas.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <div class="background2">
-        <div class="container-fluid">
+        <div class="container-fluid text-center h-100">
             <div class="background2">
                 <div class="row">
             <header class="header">
@@ -46,24 +45,31 @@
                 </nav>
             </header>
         <main>
-            <h1>Las avipas</h1>
-            <h2>las avispas no me caen bien pero son bastante facheras</h2>
-            <article>
-                <div class="avispacaja">
-                    <iframe width="355" height="531" src="https://www.youtube.com/embed/Me2u4EVOIFk" title="Chasing Out Hornets Trying to Attack Bee #shorts #hornet #beehive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <h2>aca hay un video de un señor defendiendo sus abejas de avispas que las quieren atacar Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto corrupti quo excepturi nesciunt? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio eveniet vero eius eos quasi doloribus vitae aut, eligendi iure nostrum provident soluta qui a adipisci. Facere ipsum illum repudiandae nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia expedita dolorem ex voluptate doloribus fugiat rem temporibus molestiae porro, placeat, reiciendis, ea at quibusdam sunt? </h2>
-                    <div class="queganasdecomplicarme">
-                    <img src="../images/avispa.jpg" width="500px" height="400px" alt="una foto de una avispa">
-                    </div>
-                </div>
-            </article>
-            <div class="nidoavispacaja">
-                <iframe width="665" height="543" src="https://www.youtube.com/embed/2zKwRk_uKHY" title="Yellow Jacket MASSIVE Ground Nest STING Wasp Nest Removal ASMR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <p><h2>aca un video de un nido de avispas siendo removido con una aspiradora Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vitae at est, cum cumque consequatur accusamus odit nesciunt aliquam? Quod vero qui impedit est, expedita distinctio dignissimos dicta iste minus.
-                Molestiae saepe voluptatibus cumque fugiat impedit molestias earum excepturi exercitationem? Totam odio maxime d inventore ipsa sit illo sequi ullam, minima eius sint.</h2></p>
+            <div class="container-fluid text-center h-100">
+                    <div class="row justify-content-center">
+                  <!-- avispa hate -->
+                  <h2 class="titulobicho1"> Las Avispas</h2>
+                    <h2 class="titulobicho2"> Las avispas son una copia  de las abejas pero mas flacas y aparte son mas agresivas</h2>
+                    <div class="avispacaja1">
+                  <div class="row justify-content-center">
+                    <div class="col-2avispa col-sm-4avs"><iframe width="355" height="531" src="https://www.youtube.com/embed/Me2u4EVOIFk" title="Chasing Out Hornets Trying to Attack Bee #shorts #hornet #beehive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+                  <div class="col-3avispa col-sm-4avs"><p><h2 class="textodescrip1">aca hay un video de un señor defendiendo sus abejas de avispas que las quieren atacar, hagamos de cuenta la tipicia</h2></p></div>
+                  <div class="col-2avispa col-sm-4avs"><img class="img-fluid" src="../images/avispa.jpg" alt="una imagen de un frasco de miel que parece muy bueno"></div>
             </div>
+        </div>
+                  </div>
+                  <div class="row justify-content-center">
+                                    <!-- panal video -->
+                                    <div class="col-8avs col-sm-4avs"> 
+                                        <iframe width="665" height="543" src="https://www.youtube.com/embed/2zKwRk_uKHY" title="Yellow Jacket MASSIVE Ground Nest STING Wasp Nest Removal ASMR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    </div>
+                                      <div class="col-8 col-sm-4avs"> 
+                                        <p><h2 class="textodescrip1">este es un video donde un señor elimina un panal de avispas con una aspiradora, simplemente epico</h2></p>
+                                    </div>
+                    </div>
+                    <div class="sticky"><img class="logow" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1022px-WhatsApp.svg.png" alt="logo de whatsapp"></div>
+                </div>
         </main> 
-        <div class="sticky"><img class="logow" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1022px-WhatsApp.svg.png" alt="logo de whatsapp"></div>
     </div> 
     <footer>
         <li class="logocontainerm"><img src="https://images.vexels.com/media/users/3/156307/isolated/preview/45570f652c52ccfad13d9f6b2a432ec6-icono-de-hormiga-simple.png" class="logo" alt="el logo de la pagina, una mantiz"></li>
