--- a/pages/avispas2.html
+++ b/pages/avispas2.html
@@ -46,33 +46,26 @@
             </header>
         <main>
             <div class="container-fluid text-center h-100">
-                
                     <div class="row justify-content-center">
-                        <h1 class="titulobicho1">Las Abejas</h1>
-                        <h2 class="titulobicho2">exiten un total de 9 especies de abejas y luego existen mas de 50 subespecies de abejas las cuales se generan al entrecruzar especies y subespecies</h2>
-                  <div class="col-7 col-sm-4"> 
-                    <img class="img-fluid" src="../images/abejadx.jpg" alt="una imagen de una abeja">
-                </div>
-                  <div class="col-5 col-sm-4"> 
-                    <p><h2 class="textodescrip1">esta es una foto de una abeja que me parecio fachera hagamos como que el texto es mas grande y queda con la imagen de la abeja</h2></p>
-                </div>
-            </div>
-                  <!-- miel de abeja -->
-                  <h2 class="titulobicho1"> Miel</h2>
-                    <h2 class="titulobicho2"> La miel es muy buena banco mucho, inserte mas texto aca yo que se</h2>
+                  <!-- avispa hate -->
+                  <h2 class="titulobicho1"> Las Avispas</h2>
+                    <h2 class="titulobicho2"> Las avispas son una copia  de las abejas pero mas flacas y aparte son mas agresivas</h2>
+                    <div class="avispacaja1">
                   <div class="row justify-content-center">
-                  <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de miel que me parecio bonita, lo mismo que con la foto de abeja, hagamos de cuenta la tipicia</h2></p></div>
-                  <div class="col-7 col-sm-4"><img class="img-fluid" src="../images/miel.jpg" alt="una imagen de un frasco de miel que parece muy bueno"></div>
+                    <div class="col-2avispa col-sm-4avs"><iframe width="355" height="531" src="https://www.youtube.com/embed/Me2u4EVOIFk" title="Chasing Out Hornets Trying to Attack Bee #shorts #hornet #beehive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+                  <div class="col-3avispa col-sm-4avs"><p><h2 class="textodescrip1">aca hay un video de un señor defendiendo sus abejas de avispas que las quieren atacar, hagamos de cuenta la tipicia</h2></p></div>
+                  <div class="col-2avispa col-sm-4avs"><img class="img-fluid" src="../images/avispa.jpg" alt="una imagen de un frasco de miel que parece muy bueno"></div>
+            </div>
+        </div>
                   </div>
-                    <!-- panal de abeja -->
-                    
-                    <h2 class="titulobicho1"> Panales de Abeja</h2>
-                    <h2 class="titulobicho2"> Los panales de abeja son la casa de las abejas, de ahi sale la miel por si no sabias, manso dato no?</h2>
-                    <div class="row justify-content-center" class="pisopag">
-                    <div class="col-7 col-sm-4">
-                        <img class="img-fluid" src="../images/panaldeabejaentero.jpg" alt="una imagen de un panal de abejas desde una vista alejada">
-                    </div>
-                    <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de un panal que esta fachero ya sabes como sigue el texto </h2></p>
+                  <div class="row justify-content-center">
+                                    <!-- panal video -->
+                                    <div class="col-8avs col-sm-4avs"> 
+                                        <iframe width="665" height="543" src="https://www.youtube.com/embed/2zKwRk_uKHY" title="Yellow Jacket MASSIVE Ground Nest STING Wasp Nest Removal ASMR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    </div>
+                                      <div class="col-8 col-sm-4avs"> 
+                                        <p><h2 class="textodescrip1">este es un video donde un señor elimina un panal de avispas con una aspiradora, simplemente epico</h2></p>
+                                    </div>
                     </div>
                     <div class="sticky"><img class="logow" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1022px-WhatsApp.svg.png" alt="logo de whatsapp"></div>
                 </div>
