corrigiendo_cosa_ciegos_y_escara_y_avispa_realizado

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <div class="col-6 col-sm-4">
                     <img class="img-fluid" src="../images/escarabajoejemplo.jpg" alt="una imagen de una avispa">
                 </div>
+    </main>
     <footer>
         <li class="logocontainerm"><img src="https://images.vexels.com/media/users/3/156307/isolated/preview/45570f652c52ccfad13d9f6b2a432ec6-icono-de-hormiga-simple.png" class="logo" alt="el logo de la pagina, una mantiz"></li>
         <p>todos los derechos reservados</p>
