--- a/pages/Arañas.html
+++ b/pages/Arañas.html
@@ -53,16 +53,16 @@
                     <h1 class="arañasonly">Las Arañas</h1>
                     <h2 class="arañasonlydescrip">Las arañas son bichos re facheros que hacen cosas facheras</h2>
                     <div class="cajaara1">
-              <div class="col-6 col-sm-3"> 
+              <div class="col-6ara col-sm-3"> 
                 <img class="img-fluid" src="../images/arañachiquita.jpg" alt="una imagen de una araña chiquita">
             </div>
-            <div class="col-7 col-sm-3"> 
+            <div class="col-7ara col-sm-3"> 
                 <p><h2 class="arañasonlydescrip">esta araña es chiquita</h2></p>
             </div>
-              <div class="col-7 col-sm-3"> 
+              <div class="col-7ara col-sm-3"> 
                 <p><h2 class="arañasonlydescrip">esta araña es azul</h2></p>
             </div>
-            <div class="col-6 col-sm-3"> 
+            <div class="col-6ara col-sm-3"> 
                 <img class="img-fluid" src="../images/tarantulacobalto.jpg" alt="una imagen de una tarantula cobalto una subespecie de las tarantulas">
             </div>
             </div>
@@ -71,13 +71,13 @@
               <h2 class="arañasonly"> Videos</h2>
                 <h2 class="arañasonlydescrip">Vidos de arañas que me parecieron facheros</h2>
               <div class="row justify-content-center">
-              <div class="col-2 col-sm-3">
+              <div class="col-2ara col-sm-3">
                 <iframe width="560px" height="443px" src="https://www.youtube.com/embed/PQbScg3r1oQ" title="Spider Dances For His Life!! | Life Story | BBC" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
-              <div class="col-3 col-sm-3">
+              <div class="col-3ara col-sm-3">
                 <p><h2 class="arañasonlydescrip"> videos de arañas facheros</h2></p>
             </div>
-              <div class="col-2 col-sm-3">
+              <div class="col-2ara col-sm-3">
                 <iframe width="565px" height="443px" src="https://www.youtube.com/embed/zNtSAQHNONo" title="Beautiful Spider Web Build Time-lapse | BBC Earth" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
               </div>
