--- a/pages/Avispas.html
+++ b/pages/Avispas.html
@@ -54,14 +54,14 @@
                   <div class="row justify-content-center">
                     <div class="col-2avispa col-sm-4avs"><iframe width="355" height="531" src="https://www.youtube.com/embed/Me2u4EVOIFk" title="Chasing Out Hornets Trying to Attack Bee #shorts #hornet #beehive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
                   <div class="col-3avispa col-sm-4avs"><p><h2 class="textodescrip1">aca hay un video de un señor defendiendo sus abejas de avispas que las quieren atacar, hagamos de cuenta la tipicia</h2></p></div>
-                  <div class="col-2avispa col-sm-4avs"><img class="img-fluid" src="../images/avispa.jpg" alt="una imagen de un frasco de miel que parece muy bueno"></div>
+                  <div class="col-2avispa col-sm-4avs"><img class="img-fluid" src="../images/avispa.jpg" alt="una imagen de una avispa volando"></div>
             </div>
         </div>
                   </div>
                   <div class="row justify-content-center">
                                     <!-- panal video -->
-                                    <div class="col-8avs col-sm-4avs"> 
-                                        <iframe width="665" height="543" src="https://www.youtube.com/embed/2zKwRk_uKHY" title="Yellow Jacket MASSIVE Ground Nest STING Wasp Nest Removal ASMR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    <div class="col-8avs col-sm-5avs"> 
+                                        <iframe width="465" height="443" src="https://www.youtube.com/embed/2zKwRk_uKHY" title="Yellow Jacket MASSIVE Ground Nest STING Wasp Nest Removal ASMR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                     </div>
                                       <div class="col-8 col-sm-4avs"> 
                                         <p><h2 class="textodescrip1">este es un video donde un señor elimina un panal de avispas con una aspiradora, simplemente epico</h2></p>
