--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="col-6 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de un escarabajo, Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, iste quia. Voluptatum qui hic repellendus tenetur. Sequi cumque quos pariatur voluptatem, facilis tenetur laudantium perferendis exercitationem ab, explicabo itaque rerum!
                     Ratione molestiae dolor eum debitis. Excepturi ad delectus error aliquam fugit quaerat debitis voluptatem ex quis magni modi, dolore consequuntur suscipit fugiat alias ratione, libero laboriosam velit, numquam distinctio! Aliquam? </h2></p></div>
                 <div class="col-6 col-sm-4">
-                    <img class="img-fluid" src="../images/escarabajoejemplo.jpg" alt="una imagen de una avispa">
+                    <img class="img-fluid" src="../images/escarabajoejemplo.jpg" alt="una imagen de un escarabajo">
                 </div>
     </main>
     <footer>
