--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h1 class="titulobicho1">Las Abejas</h1>
                 <h2 class="titulobicho2">existen un total de 9 especies de abejas y luego existen mas de 50 subespecies de abejas las cuales se generan al entrecruzar especies y subespecies</h2>
               <div class="col-7 col-sm-4"> 
-                <img class="img-fluid" src="../images/abejaejemplo.jpg"  alt="una imagen de una abeja">
+                <img class="img-fluid" src="./images/abejaejemplo.jpg"  alt="una imagen de una abeja">
             </div>
               <div class="col-5 col-sm-4"> <p><h2 class="textodescrip1">una imagen de una abeja,Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque corporis reprehenderit maiores doloremque nisi beatae voluptas totam dolorem ut deserunt hic explicabo iure quasi sequi commodi sed amet, aliquid voluptatem.
                 Unde natus sunt commodi libero ex sit voluptate animi quos, fuga error aliquid obcaecati doloribus dignissimos doloremque, nostrum illo harum. Ullam quis fuga eius quos quaerat molestias alias, accusamus autem.</h2></p>
@@ -63,7 +63,7 @@
                 <h2 class="titulobicho2"> Las arañas son re facheras inserte texto ejemplo porque nose que poner Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure at rem doloribus voluptas tempora minima mollitia dolore officia libero vel! Perferendis beat</h2>
               <div class="row justify-content-end">
               <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">Una imagen de una araña, Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti veritatis exercitationem tempore voluptatum harum porro asperiores ipsum repellendus necessitatibus. Repudiandae blanditiis, iure obcaecati itaque officiis doloribus quae dolorem est repellat.</h2></p></div>
-              <div class="col-7 col-sm-4"><img class="img-fluid" src="../images/arañaejemplo.jpg" alt="una imagen de una araña"></div>
+              <div class="col-7 col-sm-4"><img class="img-fluid" src="./images/arañaejemplo.jpg" alt="una imagen de una araña"></div>
               </div>
                 <!-- avispas -->
                 
@@ -71,7 +71,7 @@
                 <h2 class="titulobicho2"> Las avispas son re facheras pero haters inserte texto ejemplo porque nose que poner Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure at rem doloribus voluptas tempora minima mollitia dolore officia libero vel! Perferendis beat</h2>
                 <div class="row justify-content-start">
                 <div class="col-7 col-sm-4">
-                    <img class="img-fluid" src="../images/avispaejemplo.jpg" alt="una imagen de una avispa">
+                    <img class="img-fluid" src="./images/avispaejemplo.jpg" alt="una imagen de una avispa">
                 </div>
                 <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de una avispa, Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, iste quia. Voluptatum qui hic repellendus tenetur. Sequi cumque quos pariatur voluptatem, facilis tenetur laudantium perferendis exercitationem ab, explicabo itaque rerum!
                     Ratione molestiae dolor eum debitis. Excepturi ad delectus error aliquam fugit quaerat debitis voluptatem ex quis magni modi, dolore consequuntur suscipit fugiat alias ratione, libero laboriosam velit, numquam distinctio! Aliquam? </h2></p>
@@ -86,7 +86,7 @@
                 <div class="col-6 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de un escarabajo, Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, iste quia. Voluptatum qui hic repellendus tenetur. Sequi cumque quos pariatur voluptatem, facilis tenetur laudantium perferendis exercitationem ab, explicabo itaque rerum!
                     Ratione molestiae dolor eum debitis. Excepturi ad delectus error aliquam fugit quaerat debitis voluptatem ex quis magni modi, dolore consequuntur suscipit fugiat alias ratione, libero laboriosam velit, numquam distinctio! Aliquam? </h2></p></div>
                 <div class="col-6 col-sm-4">
-                    <img class="img-fluid" src="../images/escarabajoejemplo.jpg" alt="una imagen de un escarabajo">
+                    <img class="img-fluid" src="./images/escarabajoejemplo.jpg" alt="una imagen de un escarabajo">
                 </div>
     </main>
     <footer>
