--- a/pages/Escarabajos.html
+++ b/pages/Escarabajos.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../index.html">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
@@ -22,7 +21,7 @@
             <header class="header">
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#">Pagina Principal</a>
+                        <a class="navbar-brand" href="../index.html">Pagina Principal</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
