--- a/pages/Abejas.html
+++ b/pages/Abejas.html
@@ -16,11 +16,11 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <div class="background1">
-        <div class="container-fluid">
-                <div class="row">
+    <div class="container-fluid">
+        <div class="background1">
+        <div class="row">
             <header class="header">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <nav class="navbar navbar-expand-lg bg-body-tertiary ">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="../index.html">Pagina Principal</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,33 +48,31 @@
             </header>
     <main>
         <div class="container-fluid text-center h-100">
-                <div class="row justify-content-center">
-                    <h1 class="titulobicho1">Las Abejas</h1>
-                    <h2 class="titulobicho2">exiten un total de 9 especies de abejas y luego existen mas de 50 subespecies de abejas las cuales se generan al entrecruzar especies y subespecies</h2>
-              <div class="col-7 col-sm-4"> 
-                <img class="img-fluid" src="../images/abejadx.jpg" alt="una imagen de una abeja">
+            <div class="row justify-content-center">
+                <h1 class="titulobicho1">Las Abejas</h1>
+                <h2 class="titulobicho2">exiten un total de 9 especies de abejas y luego existen mas de 50 subespecies de abejas las cuales se generan al entrecruzar especies y subespecies</h2>
+                    <div class="col-7 col-sm-4"> 
+                        <img class="img-fluid" src="../images/abejadx.jpg" alt="una imagen de una abeja">
+                    </div>
+                    <div class="col-5 col-sm-4"> 
+                        <p><h2 class="textodescrip1">esta es una foto de una abeja que me parecio fachera hagamos como que el texto es mas grande y queda con la imagen de la abeja</h2></p>
+                    </div>
             </div>
-              <div class="col-5 col-sm-4"> 
-                <p><h2 class="textodescrip1">esta es una foto de una abeja que me parecio fachera hagamos como que el texto es mas grande y queda con la imagen de la abeja</h2></p>
+            <!-- miel de abeja -->
+            <h2 class="titulobicho1"> Miel</h2>
+            <h2 class="titulobicho2"> La miel es muy buena banco mucho, inserte mas texto aca yo que se</h2>
+            <div class="row justify-content-center">
+                <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de miel que me parecio bonita, lo mismo que con la foto de abeja, hagamos de cuenta la tipicia</h2></p></div>
+                <div class="col-7 col-sm-4"><img class="img-fluid" src="../images/miel.jpg" alt="una imagen de un frasco de miel que parece muy bueno"></div>
             </div>
-        </div>
-              <!-- miel de abeja -->
-              <h2 class="titulobicho1"> Miel</h2>
-                <h2 class="titulobicho2"> La miel es muy buena banco mucho, inserte mas texto aca yo que se</h2>
-              <div class="row justify-content-center">
-              <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de miel que me parecio bonita, lo mismo que con la foto de abeja, hagamos de cuenta la tipicia</h2></p></div>
-              <div class="col-7 col-sm-4"><img class="img-fluid" src="../images/miel.jpg" alt="una imagen de un frasco de miel que parece muy bueno"></div>
-              </div>
                 <!-- panal de abeja -->
-                
                 <h2 class="titulobicho1"> Panales de Abeja</h2>
                 <h2 class="titulobicho2"> Los panales de abeja son la casa de las abejas, de ahi sale la miel por si no sabias, manso dato no?</h2>
-                <div class="row justify-content-center" class="pisopag">
+            <div class="row justify-content-center" class="pisopag">
                 <div class="col-7 col-sm-4">
                     <img class="img-fluid" src="../images/panaldeabejaentero.jpg" alt="una imagen de un panal de abejas desde una vista alejada">
                 </div>
-                <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de un panal que esta fachero ya sabes como sigue el texto </h2></p>
-                </div>
+                <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de un panal que esta fachero ya sabes como sigue el texto </h2></p></div>
             </div>
             <div class="sticky"><img class="logow" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1022px-WhatsApp.svg.png" alt="logo de whatsapp"></div>
             <footer>
@@ -87,6 +85,8 @@
                 </ul>
             </footer>
         </main>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
