--- a/pages/Escarabajos.html
+++ b/pages/Escarabajos.html
@@ -51,13 +51,13 @@
                       <!-- escarabajo imagenes -->
                       <h2 class="titulobicho1"> Los Escarabajos</h2>
                         <h2 class="titulobicho2"> Los escarabajos son omega facheros vienen de todo tipo de colores y tamaños algunos caminan abajo del agua en medio de esta y otros vuelan</h2>
-                        <div class="avispacaja1">
+                        <div class="escaracaja">
                       <div class="row justify-content-center">
-                        <div class="col-1esca col-sm-4avs"><img class="img-fluid" src="../images/escarabajo1.jpg" alt="una foto de un escarabajo"></div>
-                        <div class="col-1esca col-sm-4avs"><p><h2 class="textodescrip1">testeando limites para ver que tanto cambia todo, hagamos de cuenta la tipicia</h2></p></div>
-                        <div class="col-1esca col-sm-4avs"><img class="img-fluid" src="../images/escarabajoflow.jpg" alt="un escarabajo azul fachero"></div>
-                      <div class="col-1esca col-sm-4avs"><p><h2 class="textodescrip1">idem anterior que tan bien saldra esto, hagamos de cuenta la tipicia</h2></p></div>
-                      <div class="col-1esca col-sm-4avs"><img class="img-fluid" src="../images/escarabajorojo.jpg" alt="un escarabajo rojo"></div>
+                        <div class="col-1esca col-sm-4esc"><img class="img-fluid" src="../images/escarabajo1.jpg" alt="una foto de un escarabajo"></div>
+                        <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1">testeando limites para ver que tanto cambia todo, hagamos de cuenta la tipicia</h2></p></div>
+                        <div class="col-1esca col-sm-4esc"><img class="img-fluid" src="../images/escarabajoflow.jpg" alt="un escarabajo azul fachero"></div>
+                      <div class="col-1esca col-sm-4esc"><p><h2 class="textodescrip1">idem anterior que tan bien saldra esto, hagamos de cuenta la tipicia</h2></p></div>
+                      <div class="col-1esca col-sm-4esc"><img class="img-fluid" src="../images/escarabajorojo.jpg" alt="un escarabajo rojo"></div>
                 </div>
             </div>
                       </div>
