--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta pagina hay hyperlinks de otros bichos aparte de informacion sobre los insectos de la pagina y porque me parecen facheros">
+    <meta name="keyword" content="abejas, escarabajos, avispas, bichos, insectos, arañas, fachero ">
     <title>PreEntrega2PrietoAgustin</title>
     <link rel="stylesheet" href="./pages/Abejas.html">
     <link rel="stylesheet" href="./pages/Arañas.html">
