--- a/pages/Abejas.html
+++ b/pages/Abejas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="en esta pagina se encuentra contenido de uno de los insectos mas facheros que existen, las abejas, las cuales son muy peculiares,en esta pagina se veran imagenes de abejas, panales, miel y/o contenido relacionado a abejas">
+    <meta name="keyword" content="abeja, abejas, miel, panal, polen, polenizar, colmena, osos, winnie de poo, enjambre">
     <title>PreEntrega2PrietoAgustin</title>
     <link rel="stylesheet" href="/pages/Abejas.html">
     <link rel="stylesheet" href="/pages/Arañas.html">
