--- a/pages/Arañas.html
+++ b/pages/Arañas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta pagina se habla de arañas, tipos de arañas, contenidos de arañas, videos de arañas, nada de el hombre araña, por ahora,">
+    <meta name="keyword" content="arañas, araña, telaraña, tela de araña, tarantulas">
     <title>PreEntrega2PrietoAgustin</title>
     <link rel="stylesheet" href="/pages/Abejas.html">
     <link rel="stylesheet" href="/pages/Arañas.html">
