--- a/pages/Escarabajos.html
+++ b/pages/Escarabajos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta pagina se hablara de porque los escarabajos son facheros, hay un par de videos en los cuales la tematica principal tiene o involucra escarabajos y tambien tiene un par de imagenes de escarabajos">
+    <meta name="keyword" content="escarabajos, escarabajo, pelea, pvp, fachero, bicho">
     <title>PreEntrega2PrietoAgustin</title>
     <link rel="stylesheet" href="/pages/Abejas.html">
     <link rel="stylesheet" href="/pages/Arañas.html">
