--- a/pages/Abejas.html
+++ b/pages/Abejas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="en esta pagina se encuentra contenido de uno de los insectos mas facheros que existen, las abejas, las cuales son muy peculiares,en esta pagina se veran imagenes de abejas, panales, miel y/o contenido relacionado a abejas">
-    <meta name="keyword" content="abeja, abejas, miel, panal, polen, polenizar, colmena, osos, winnie de poo, enjambre">
+    <meta name="keyword" content="abeja, abejas, miel, panal, polen, polenizar, colmena, osos, winnie de poo enjambre">
     <title>PreEntrega2PrietoAgustin</title>
     <link rel="stylesheet" href="/pages/Abejas.html">
     <link rel="stylesheet" href="/pages/Arañas.html">
@@ -53,10 +53,10 @@
             <div class="row justify-content-center">
                 <h1 class="titulobicho1">Las Abejas</h1>
                 <h2 class="titulobicho2">exiten un total de 9 especies de abejas y luego existen mas de 50 subespecies de abejas las cuales se generan al entrecruzar especies y subespecies</h2>
-                    <div class="col-7 col-sm-4"> 
+                    <div class="col-7abeja col-sm-4"> 
                         <img class="img-fluid" src="../images/abejadx.jpg" alt="una imagen de una abeja">
                     </div>
-                    <div class="col-5 col-sm-4"> 
+                    <div class="col-5abeja col-sm-4"> 
                         <p><h2 class="textodescrip1">esta es una foto de una abeja que me parecio fachera hagamos como que el texto es mas grande y queda con la imagen de la abeja</h2></p>
                     </div>
             </div>
@@ -64,17 +64,17 @@
             <h2 class="titulobicho1"> Miel</h2>
             <h2 class="titulobicho2"> La miel es muy buena banco mucho, inserte mas texto aca yo que se</h2>
             <div class="row justify-content-center">
-                <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de miel que me parecio bonita, lo mismo que con la foto de abeja, hagamos de cuenta la tipicia</h2></p></div>
-                <div class="col-7 col-sm-4"><img class="img-fluid" src="../images/miel.jpg" alt="una imagen de un frasco de miel que parece muy bueno"></div>
+                <div class="col-5abeja col-sm-4"><p><h2 class="textodescrip1">esta es una foto de miel que me parecio bonita, lo mismo que con la foto de abeja, hagamos de cuenta la tipicia</h2></p></div>
+                <div class="col-7abeja col-sm-4"><img class="img-fluid" src="../images/miel.jpg" alt="una imagen de un frasco de miel que parece muy bueno"></div>
             </div>
                 <!-- panal de abeja -->
                 <h2 class="titulobicho1"> Panales de Abeja</h2>
                 <h2 class="titulobicho2"> Los panales de abeja son la casa de las abejas, de ahi sale la miel por si no sabias, manso dato no?</h2>
             <div class="row justify-content-center" class="pisopag">
-                <div class="col-7 col-sm-4">
+                <div class="col-7abeja col-sm-4">
                     <img class="img-fluid" src="../images/panaldeabejaentero.jpg" alt="una imagen de un panal de abejas desde una vista alejada">
                 </div>
-                <div class="col-5 col-sm-4"><p><h2 class="textodescrip1">esta es una foto de un panal que esta fachero ya sabes como sigue el texto </h2></p></div>
+                <div class="col-5abeja col-sm-4"><p><h2 class="textodescrip1">esta es una foto de un panal que esta fachero ya sabes como sigue el texto </h2></p></div>
             </div>
             <div class="sticky"><img class="logow" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1022px-WhatsApp.svg.png" alt="logo de whatsapp"></div>
             <footer>
