--- a/pages/Abejas.html
+++ b/pages/Abejas.html
@@ -7,10 +7,10 @@
     <meta name="description" content="en esta pagina se encuentra contenido de uno de los insectos mas facheros que existen, las abejas, las cuales son muy peculiares,en esta pagina se veran imagenes de abejas, panales, miel y/o contenido relacionado a abejas">
     <meta name="keyword" content="abeja, abejas, miel, panal, polen, polenizar, colmena, osos, winnie de poo enjambre">
     <title>PreEntrega3PrietoAgustin</title>
-    <link rel="stylesheet" href="/pages/Abejas.html">
-    <link rel="stylesheet" href="/pages/Arañas.html">
-    <link rel="stylesheet" href="/pages/Avispas.html">
-    <link rel="stylesheet" href="/pages/Escarabajos.html">
+    <link rel="stylesheet" href="./pages/Abejas.html">
+    <link rel="stylesheet" href="./pages/Arañas.html">
+    <link rel="stylesheet" href="./pages/Avispas.html">
+    <link rel="stylesheet" href="./pages/Escarabajos.html">
     <link rel="stylesheet" href="../index.html">
 
     
