--- a/pages/Avispas.html
+++ b/pages/Avispas.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Esta pagina contiene imagenes, videos e informacion de las avispas ya sea lo que no me gusta de estas o porque de todas formas me parecen facheras">
     <meta name="keyword" content="miel, avispa, avispas, colmena, enjambre">
     <title>PreEntrega3PrietoAgustin</title>
-    <link rel="stylesheet" href="/pages/Abejas.html">
-    <link rel="stylesheet" href="/pages/Arañas.html">
-    <link rel="stylesheet" href="/pages/Avispas.html">
-    <link rel="stylesheet" href="/pages/Escarabajos.html">
+    <link rel="stylesheet" href="./pages/Abejas.html">
+    <link rel="stylesheet" href="./pages/Arañas.html">
+    <link rel="stylesheet" href="./pages/Avispas.html">
+    <link rel="stylesheet" href="./pages/Escarabajos.html">
     <link rel="stylesheet" href="../index.html">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
