scroll_lateral_removido

--- a/pages/Avispas.html
+++ b/pages/Avispas.html
@@ -44,6 +44,7 @@
                         </ul>
                     </div>
                 </div>
+                <li class="logocontainerm1"><img src="https://images.vexels.com/media/users/3/156307/isolated/preview/45570f652c52ccfad13d9f6b2a432ec6-icono-de-hormiga-simple.png" class="logo" alt="el logo de la pagina, una mantiz"></li>
                 </nav>
             </header>
         <main>
